Fix weird rendering on mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -102,15 +102,14 @@ footer a:hover {
 }
 
 .wrapper {
-    display: grid;
-    gap: 0 2em;
     align-items: start;
-    grid-template-columns: 1fr;
     padding-bottom: 2em;
 }
 
 @media (min-width: 800px) {
     .wrapper {
+        gap: 0 2em;
+        display: grid;
         grid-template-columns: auto 75ch;
     }
 }
